<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.courseregistration.UserActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Activities"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/drop"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="add/drop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="add/drop" />


    <Button
        android:id="@+id/backToLogin"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="Logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registeredCourses" />


    <Button
        android:id="@+id/timeTable"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="time table"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <Button
        android:id="@+id/schedule"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="view schedule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTable" />

    <Button
        android:id="@+id/searchCourse"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="Search Course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop" />

    <Button
        android:id="@+id/help"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCourse" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="Change Password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule" />

    <Button
        android:id="@+id/registeredCourses"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="Registered Courses"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword"/>
</android.support.constraint.ConstraintLayout>
